...
				.onTapGesture {
//					routerPath.presentFullSheet(destination: .receiptCongrats(points: 45))
					receiptViewModel.receiptState = .submitted
				}
				.longFlexibleButtonStyle()
				.accessibilityIdentifier(AppAccessibilty.receipts.submitReceiptButton)
			Button("Try Again") {
				// button action
				routerPath.presentedSheet = nil
				DispatchQueue.main.asyncAfter(deadline: .now() + 0.3) {
					cameraModel.showCamera = true
				}
			}
...
