...
import SwiftUI

struct ProcessedReceiptList: View {
	var eligibleItems: [ProcessedReceiptItem] = []
	var ineligibleItems: [ProcessedReceiptItem] = []
	private let eligibleItemsTitle = "Eligible Items"
	private let ineligibleItemsTitle = "Ineligible Items"
	
	var body: some View {
		VStack {
			ScrollView {
				space
				if !eligibleItems.isEmpty {
...
